--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+/* Importing fonts from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@100&family=Bebas+Neue&family=Montserrat:ital,wght@0,100;1,500&display=swap');
 
+/* Universal box-sizing rule */
 html {
   box-sizing: border-box;
 }
 
+/* Body styling */
 body {
   margin: 0;
   min-height: 100vh;
@@ -13,6 +16,7 @@ body {
   background: rgb(37, 37, 37);
 }
 
+/* Styling for the button container */
 .button-container {
   border: 2px solid black;
   padding: 10px;
@@ -20,32 +24,21 @@ body {
   box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7);
 }
 
+/* Styling for the button */
 button {
-  cursor: pointer;
-  outline: none;
-  width: 120px;
-  height: 75px;
-  font-family: Barlow, sans-serif;
-  font-size: 25px;
-  font-weight: bold;
-  color: white;
-  text-shadow: 0 2px 5px black;
-  background: linear-gradient(to top, #696969, #575757);
-  border: 2px solid black;
-  border-radius: 7px;
-  box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4),
-    0 12px 12px 0 rgba(0, 0, 0, 0.3);
+  /* ... */
 }
 
+/* Additional button states: hover and active */
 button:hover {
-  background: linear-gradient(to bottom, #696969, #575757);
+  /* ... */
 }
 
 button:active {
-  transform: translateY(3px);
-  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.3);
+  /* ... */
 }
 
+/* Styling for the video element */
 #video {
   display: none;
 }
